fixed white space

--- a/style.css
+++ b/style.css
@@ -134,11 +134,11 @@ main {
   border: 1px solid white;
 }
 
-/* Your fixes below */
+/* Your Fixes Below */
 
 body {
-  font-family: 'Nunito', sans-serif;
   background: #303a52;
+  font-family: 'Nunito', sans-serif;
 }
 
 nav {
@@ -160,10 +160,12 @@ p {
 a.cta-btn {
   font-size: 0.9em;
   padding: 0.2em 0.4em;
+  border-radius: 0.2em;
 }
 
 nav ul li a {
-  font-size: 1.2rem;
+  font-size: 1.2em;
+  padding: 0.8em 1em;
 }
 
 h3 {
@@ -172,4 +174,12 @@ h3 {
 
 nav {
   text-align: left;
+}
+
+.inner-wrapper {
+  padding: 1em;
+}
+.panel {
+  padding: 0.5em 1em;
+  margin-bottom: 2em;
 }
